# MissionImpossible

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile_travis  README.md  README.org  meson.build
examples/: CMakeLists.txt  Hv.cpp  Jacobian.cpp  ad_complex.cpp  hello.cpp  local_tape.cpp  meson.build  ml_network.cpp  nested.cpp  self_destructing_tape.cpp  tiny_network.cpp
examples/doc/: Jacobian.cpp  ad.cpp  local_tape.cpp  local_tape_memory.cpp  meson.build  tape_info.cpp  underlying_type.cpp  underlying_type_2.cpp  underlying_value.cpp
sandbox/: ad_benchmark.cpp  big_one.cpp  big_one_2.cpp  big_one_3.cpp  derivatives.cpp  hello.cpp  meson.build  misc.cpp  nested_2nd_order.cpp  op_equality_bug.cpp  tape.cpp
src/: meson.build
src/AutoDiffCpp/: JamesBond_tape.hpp  Mission_Impossible.hpp  ad.hpp  ad_fwd.hpp  ad_new.hpp  always.hpp  derivative_computation.hpp  derivatives.hpp  final_value_type.hpp  functions.hpp  hello.cpp  hello.hpp  identity.hpp  meson.build  mission_impossible_tape.hpp  new_ad.hpp  new_ad_fwd.hpp  tape.cpp  tape.hpp  tape_fwd.hpp  tape_vector.hpp  type_traits.hpp
src/MissionImpossible/: MissionImpossible.hpp  ad.hpp  ad_fwd.hpp  always.hpp  complex_support.hpp  derivatives.hpp  final_value_type.hpp  functions.hpp  identity.hpp  meson.build  mission_impossible_tape.hpp  tape.cpp  tape.hpp  tape_vector.hpp  underlying_type.hpp
src/Mission_Impossible_AutoDiff/: Mission_Impossible.hpp  ad.hpp  ad_fwd.hpp  always.hpp  derivatives.hpp  final_value_type.hpp  functions.hpp  identity.hpp  meson.build  mission_impossible_tape.hpp  tape.cpp  tape.hpp  tape_vector.hpp  type_traits.hpp
subprojects/: google_benchmark.wrap
test/: Hv.cpp  ad.cpp  ad_new.cpp  derivatives.cpp  final_value_type.cpp  forward_mode.cpp  functions.cpp  hello.cpp  meson.build  min_extra_tests.cpp  mission_impossible_tape.cpp  nested_2nd_order.cpp  new_ad.cpp  new_final_value_type.cpp  tape.cpp  tape_vector.cpp  third_order.cpp  underlying_type.cpp
tutorial/: tutorial.org
