subdir('doc')

#################################################################

executable('Jacobian',
	   'Jacobian.cpp',
	   dependencies : [MissionImpossible_dep])

executable('nested',
	   'nested.cpp',
	   dependencies : [MissionImpossible_dep])

executable('tiny_network',
	   'tiny_network.cpp',
	   dependencies : [MissionImpossible_dep])

executable('local_tape',
	   'local_tape.cpp',
	   dependencies : [MissionImpossible_dep])

executable('Hv',
	   'Hv.cpp',
	   dependencies : [MissionImpossible_dep])

executable('ad_complex',
	   'ad_complex.cpp',
	   dependencies : [MissionImpossible_dep])
