executable('tape',
	   'tape.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('derivatives',
	   'derivatives.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('nested_2nd_order',
	   'nested_2nd_order.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('misc',
	   'misc.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('big_one',
	   'big_one.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('big_one_2',
	   'big_one_2.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('big_one_3',
	   'big_one_3.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep])

executable('ad_benchmark',
	   'ad_benchmark.cpp',
	   dependencies : [Mission_Impossible_AutoDiff_dep,google_benchmark_dep])
