executable('tape',
	   'tape.cpp',
	   dependencies : [MissionImpossible_dep])

executable('derivatives',
	   'derivatives.cpp',
	   dependencies : [MissionImpossible_dep])

executable('nested_2nd_order',
	   'nested_2nd_order.cpp',
	   dependencies : [MissionImpossible_dep])

executable('misc',
	   'misc.cpp',
	   dependencies : [MissionImpossible_dep])

executable('ad_benchmark',
	   'ad_benchmark.cpp',
	   dependencies : [MissionImpossible_dep,google_benchmark_dep])
