executable('ad',
	   'ad.cpp',
	   dependencies : [MissionImpossible_dep])

# executable('underlying_type',
# 	   'underlying_type.cpp',
# 	   dependencies : [MissionImpossible_dep])

executable('underlying_type_2',
	   'underlying_type_2.cpp',
	   dependencies : [MissionImpossible_dep])

executable('underlying_value',
	   'underlying_value.cpp',
	   dependencies : [MissionImpossible_dep])
